CSS/styles.css
.nav {
  margin-bottom: 60px;
}

.navbar-collapse {
  display: inline-block;
  justify-content: right;
}
.pokemon-list {
  /* background-image:url('../img/squirtle-wallpaper.png');
  background-repeat: no-repeat;
  /*The background-attachment property sets whether a 
  background image scrolls with the rest of the page, or is fixed.*/
  /*background-attachment: fixed;
  background-position: center;*/
  background-color: black;
  margin-top: 60px;
  list-style-type: none;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
  grid-auto-rows: minmax(300px, auto);
  gap: 30px 30px;
  padding: 10px;
  justify-items: center;
  align-items: center;
  /*display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;*/
}

.poke-button{
  display: flex;
  flex-direction: column;
  justify-items: center;
  align-items: center;
  border-top: 3px solid yellow;
  border-bottom: 3px solid yellow;
  overflow-x: hidden;
  overflow-y: hidden;
  padding: 10px;
  background: #333;
  border-radius: 10px;
  width: 100%;
  height: 100%;
  color: #eee;
  transition: 0.2s ease-in-out all;
}

.poke-button:hover {
  transform: scale(1.035);
  cursor: pointer;
}

#modal-container {
  position: fixed;
  padding: 20px;
  box-sizing: border-box;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5); 
  /* to show it above other content */
  z-index: 999; 
  /* to allow scrolling if the screen is not high enough*/
  overflow: auto; 
  /* this is used to center the modal */
  display: grid;
  text-align: center;
  }

